# Pico_NumVision

./: CMakeLists.txt  LICENSE.txt  README.md  pc_viewer.py
example/: CMakeLists.txt  main.c
include/camera/: camera.h
main/: CMakeLists.txt  main.c  main.cpp  maincamera.c
src/ov7670/: camera.c  ov7670.c
